# libgdaex

./: .anjuta_sym_db.db  .cproject  .gitignore  .project  ChangeLog  Makefile.am  TODO  autogen.sh  config.h.in  configure.ac  libgdaex.pc.in
.anjuta/session/: anjuta.session  dock-layout.xml
data/: Makefile.am  gdaex_query_editor.dtd
data/gdaex2gettext/: gdaex2gettext.its  gdaex2gettext.loc
data/libgdaex/gui/: Makefile.am  libgdaex.ui
debian/: changelog  control  copyright  gbp.conf  libgdaex.install
debian/patches/: 0001-DESTDIR-support.patch  0002-Glib-old-version.patch  0003-Gda-old-version-constants-not-present.patch  0004-Gtk-old-version-gtk_label_set_xalign.patch  series
docs/gdaex2gettext/: gdaex2gettext.xml
docs/reference/: Makefile.am  libgdaex-decl-list.txt  libgdaex-decl.txt  libgdaex-docs.sgml  libgdaex-sections.txt  libgdaex-undeclared.txt  libgdaex-undocumented.txt  libgdaex-unused.txt  libgdaoj-docs.sgml  libgdaoj-undocumented.txt
docs/reference/tmpl/: libgdaex-unused.sgml  libgdaex.sgml  libgdaobj.sgml
gdaex2gettext/: Makefile.am  gdaex2gettext.c
po/: POTFILES.in  it.po
src/: Makefile.am  gdaex.c  gdaex.h  gdaobj.c  grid.c  grid.h  gridcolumn.c  gridcolumn.h  libgdaex.h  libgdaobj.h  queryeditor.c  queryeditor.h  queryeditor_marshal.list  queryeditor_widget_interface.c  queryeditor_widget_interface.h  queryeditorcheck.c  queryeditorcheck.h  queryeditorentry.c  queryeditorentry.h  queryeditorentrydate.c  queryeditorentrydate.h  sqlbuilder.c  sqlbuilder.h
tests/: Makefile.am  fill_liststore.c  gdaex2gettext.xml  getsql.c  grid.c  grid.db  query_editor.c  query_editor.db  query_editor.xml  select.c  sqlbuilder.c  test_prefix.c  test_prefix.db
